# bilsimulator

./: CMakeLists.txt  README.md
include/logic/: Game.h
include/models/: CameraRig.h  Car.h
include/world/: Parking.h  TrafficCones.h
src/: main.cpp
src/logic/: Game.cpp
src/models/: CameraRig.cpp  Car.cpp
src/world/: Parking.cpp  TrafficCones.cpp
tests/: test_car.cpp  test_parking.cpp
